fixed package.json deprecation

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     }
   ],
   "description": "Break all lines that go over the preferred line length.",
-  "activationEvents": [
-    "line-length-break:break"
-  ],
+  "activationCommands": {
+    "atom-text-editor": ["line-length-break:break"]
+  },
   "repository": "https://github.com/mustardamus/line-length-break",
   "license": "MIT",
   "engines": {
